[gd_scene load_steps=17 format=2]

[ext_resource path="res://Juegos/Meteoritos/MeteoritoSpawner.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juegos/Meteoritos/SectorMeteoritos.gd" type="Script" id=2]
[ext_resource path="res://Juegos/Niveles/Fonts/Kenney Future.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Juegos/Niveles/forceField.ogg" type="AudioStream" id=4]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( -49, -583 )
b = Vector2( -56, 493 )

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( -2, 536 )
b = Vector2( -2, -553 )

[sub_resource type="SegmentShape2D" id=3]
a = Vector2( -959, 0 )
b = Vector2( 953, 0 )

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( 952, -3 )
b = Vector2( -968, -3 )

[sub_resource type="SegmentShape2D" id=5]
a = Vector2( 14, -911 )
b = Vector2( 10, 904 )

[sub_resource type="SegmentShape2D" id=6]
a = Vector2( 9, -933 )
b = Vector2( -9, 947 )

[sub_resource type="SegmentShape2D" id=7]
a = Vector2( 1415, 1 )
b = Vector2( -1397, -13 )

[sub_resource type="SegmentShape2D" id=8]
a = Vector2( 1395, 24 )
b = Vector2( -1390, 4 )

[sub_resource type="DynamicFont" id=9]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AudioStreamPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=11]
resource_name = "advertencia"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AudioStreamPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AudioStreamPlayer:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("SpawnTimer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ -1 ],
"method": "start"
} ]
}

[sub_resource type="Animation" id=12]
resource_name = "default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayer:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="SectorMeteoritos" type="Node2D"]
z_as_relative = false
script = ExtResource( 2 )

[node name="BordesNavePlayer" type="Node2D" parent="."]
z_as_relative = false
__meta__ = {
"_edit_group_": true
}

[node name="BordeIzquierdo" type="StaticBody2D" parent="BordesNavePlayer"]
position = Vector2( -960, 4 )
z_as_relative = false
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordesNavePlayer/BordeIzquierdo"]
position = Vector2( 50, 50 )
z_as_relative = false
shape = SubResource( 1 )

[node name="BordeDerecho" type="StaticBody2D" parent="BordesNavePlayer"]
position = Vector2( 960, 4 )
z_as_relative = false
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordesNavePlayer/BordeDerecho"]
shape = SubResource( 2 )

[node name="BordeSuperior" type="StaticBody2D" parent="BordesNavePlayer"]
position = Vector2( 0, -540 )
z_as_relative = false
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordesNavePlayer/BordeSuperior"]
shape = SubResource( 3 )

[node name="BordeInferior" type="StaticBody2D" parent="BordesNavePlayer"]
position = Vector2( 0, 540 )
z_as_relative = false
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordesNavePlayer/BordeInferior"]
shape = SubResource( 4 )

[node name="DetectorFueraZona" type="Node2D" parent="."]
z_as_relative = false
__meta__ = {
"_edit_group_": true
}

[node name="DetectorIzquierdo" type="Area2D" parent="DetectorFueraZona"]
position = Vector2( -1400, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorFueraZona/DetectorIzquierdo"]
shape = SubResource( 5 )

[node name="DetectorDerecho" type="Area2D" parent="DetectorFueraZona"]
position = Vector2( 1400, 0 )
z_as_relative = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorFueraZona/DetectorDerecho"]
shape = SubResource( 6 )

[node name="DetectorSuperior" type="Area2D" parent="DetectorFueraZona"]
position = Vector2( 0, -900 )
z_as_relative = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorFueraZona/DetectorSuperior"]
shape = SubResource( 7 )

[node name="DetectorInferior" type="Area2D" parent="DetectorFueraZona"]
position = Vector2( 0, 900 )
z_as_relative = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorFueraZona/DetectorInferior"]
shape = SubResource( 8 )

[node name="Spawners" type="Node2D" parent="."]

[node name="MeteoritoSpawner11" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 575, -720 )

[node name="MeteoritoSpawner12" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -575, -720 )

[node name="MeteoritoSpawner13" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 0, -720 )

[node name="MeteoritoSpawner14" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 575, 720 )

[node name="MeteoritoSpawner15" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -575, 720 )

[node name="MeteoritoSpawner16" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 0, 720 )

[node name="MeteoritoSpawner" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1150, -720 )

[node name="MeteoritoSpawner2" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1150, -360 )

[node name="MeteoritoSpawner3" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1150, 0 )

[node name="MeteoritoSpawner4" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1150, 360 )

[node name="MeteoritoSpawner5" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1150, 720 )

[node name="MeteoritoSpawner6" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1150, -720 )

[node name="MeteoritoSpawner7" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1150, -360 )

[node name="MeteoritoSpawner8" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1150, 0 )

[node name="MeteoritoSpawner9" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1150, 360 )

[node name="MeteoritoSpawner10" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1150, 720 )

[node name="SpawnTimer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
modulate = Color( 0, 0, 0, 0 )
anchor_top = 0.003
anchor_right = 0.007
anchor_bottom = 0.003
margin_left = 4.0
margin_top = -0.24
margin_right = 1901.56
margin_bottom = 1084.76
color = Color( 0.862745, 0.0627451, 0.0627451, 1 )

[node name="Label" type="Label" parent="CanvasLayer/ColorRect"]
anchor_left = 0.496
anchor_top = 0.527
anchor_right = 0.496
anchor_bottom = 0.527
margin_left = -339.856
margin_top = -133.795
margin_right = 339.144
margin_bottom = 134.205
custom_fonts/font = SubResource( 9 )
text = "ADVERTENCIA:
LLUVIA DE METEORITOS INMINENTE"
align = 1
valign = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 10 )
anims/advertencia = SubResource( 11 )
anims/default = SubResource( 12 )

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
